src/commands/task/explorer/snapshots/ralph_wiggum__commands__task__explorer__drawing__tests__snapshot_tree_filtered_by_status.snap
---
source: src/commands/task/explorer/drawing.rs
expression: snapshot
---
 Tasks [sort: ID] [filter: progr Detail

   ◎ 1.2 Subtask B [parser] → 1  1 Epic One
                                 Component: parser

                                 Subtasks: 2













████████████████████             1/4 done (25%)
