src/commands/task/explorer/snapshots/ralph_wiggum__commands__task__explorer__drawing__tests__snapshot_tree_sorted_by_status.snap
---
source: src/commands/task/explorer/drawing.rs
expression: snapshot
---
 Tasks [sort: Status]                    Detail

 ▾ 1 Epic One [parser]                   1 Epic One
   ✓ 1.1 Subtask A [parser]              Component: parser
   ◎ 1.2 Subtask B [parser]      → 1.1
 ▾ 2 Epic Two [dag]                      Subtasks: 2
   ○ 2.1 Cycle detect [dag]
   ⊘ 2.2 Topo sort [dag]   → 2.1 → 1.2
















█████████████████████████                  1/4 done (25%)
